chore: replace and rename files for better documentation

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,14 +33,17 @@ jobs:
         with:
           node-version: '12'
 
-      - run: npm install -g widdershins
-
-      - run: mkdir source/includes/partials_common_apis && mkdir source/includes/partials_open_insurance
-
-      - name: widdershins admin metrics and status outage
+      - name: Set up widdershins
         run: |
-          widdershins source/swagger/open_admin_metrics.yaml \
-          -o source/includes/partials_common_apis/_open_admin_metrics.md.erb \
+          npm install -g widdershins
+          mkdir source/includes/partials_admin_metrics
+          mkdir source/includes/partials_common_apis
+          mkdir source/includes/partials_open_insurance
+
+      - name: Run widdershins for admin metrics and status outage
+        run: |
+          widdershins source/swagger/admin_metrics.yaml \
+          -o source/includes/partials_admin_metrics/admin_metrics.md.erb \
           --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
           --omitHeader --summary --httpsnippet
 
@@ -50,40 +53,15 @@ jobs:
           --omitHeader --summary --httpsnippet
 
       # Fase 1
-      - name: widdershins fase 1
+      - name: Run widdershins for "fase 1"
         run: |
           widdershins source/swagger/open_data_channels.yaml \
           -o source/includes/partials_open_insurance/_open_data_channels.md.erb \
           --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
           --omitHeader --summary --httpsnippet
 
-          widdershins source/swagger/open_life_welfare.yaml \
-          -o source/includes/partials_open_insurance/_open_life_welfare.md.erb \
-          --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
-          --omitHeader --summary --httpsnippet
-
-          widdershins source/swagger/open_people.yaml \
-          -o source/includes/partials_open_insurance/open_people.md.erb \
-          --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
-          --omitHeader --summary --httpsnippet
-
-          widdershins source/swagger/open_price_linked_bonds.yaml \
-          -o source/includes/partials_open_insurance/_open_price_linked_bonds.md.erb \
-          --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
-          --omitHeader --summary --httpsnippet
-
-          widdershins source/swagger/open_residence.yaml \
-          -o source/includes/partials_open_insurance/_open_residence.md.erb \
-          --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
-          --omitHeader --summary --httpsnippet
-
-          widdershins source/swagger/open_vehicle.yaml \
-          -o source/includes/partials_open_insurance/_open_vehicle.md.erb \
-          --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
-          --omitHeader --summary --httpsnippet
-
-          widdershins source/swagger/open_welfare.yaml \
-          -o source/includes/partials_open_insurance/_open_welfare.md.erb \
+          widdershins source/swagger/open_data_products_services.yaml \
+          -o source/includes/partials_open_insurance/_open_data_products_services.md.erb \
           --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
           --omitHeader --summary --httpsnippet
 
