--- a/documentation/Dockerfile
+++ b/documentation/Dockerfile
@@ -1,9 +1,7 @@
 FROM ruby:2.6-slim
 
-WORKDIR /srv/slate
-
-VOLUME /srv/slate/build
-VOLUME /srv/slate/source
+VOLUME build
+VOLUME source
 
 EXPOSE 4567
 
@@ -15,15 +13,23 @@ RUN apt-get update \
         build-essential \
         git \
         nodejs \
+        npm \
     && gem install bundler \
     && bundle install \
-    && apt-get remove -y build-essential git \
-    && apt-get autoremove -y \
-    && rm -rf /var/lib/apt/lists/*
+    && npm install -g widdershins
 
-COPY . /srv/slate
+COPY . .
 
-RUN chmod +x /srv/slate/slate.sh
+RUN chmod +x /slate.sh
 
-ENTRYPOINT ["/srv/slate/slate.sh"]
+RUN mkdir -p source/includes/partials_admin_metrics \
+    && mkdir -p source/includes/partials_common_apis \
+    && mkdir -p source/includes/partials_open_insurance
+
+RUN widdershins source/swagger/admin_metrics.yaml -o source/includes/partials_admin_metrics/_admin_metrics.md.erb --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" --omitHeader --summary --httpsnippet \
+    && widdershins source/swagger/status_outage.yaml -o source/includes/partials_common_apis/_status_outage.md.erb --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" --omitHeader --summary --httpsnippet \
+    && widdershins source/swagger/open_data_channels.yaml -o source/includes/partials_open_insurance/_open_data_channels.md.erb --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" --omitHeader --summary --httpsnippet \
+    && widdershins source/swagger/open_data_products_services.yaml -o source/includes/partials_open_insurance/_open_data_products_services.md.erb --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" --omitHeader --summary --httpsnippet
+
+ENTRYPOINT ["/slate.sh"]
 CMD ["build"]
