--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,16 @@
 on:
   push:
     branches:
-      - 'master'
+      - '**'
+      - '!master'
+  pull_request:
+    branches:
+      - '**'
 
-name: Deploy
+name: Build
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     defaults:
@@ -32,6 +36,24 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12'
+
+      - run: npm install -g @apidevtools/swagger-cli
+
+      - run: swagger-cli validate source/swagger/open_admin_metrics.yaml
+      - run: swagger-cli validate source/swagger/open_data_status_outage.yaml
+
+      # Fase 1
+      - run: swagger-cli validate source/swagger/open_data_channels.yaml
+      - run: swagger-cli validate source/swagger/open_life_welfare.yaml
+      - run: swagger-cli validate source/swagger/open_people.yaml
+      - run: swagger-cli validate source/swagger/open_price_linked_bonds.yaml
+      - run: swagger-cli validate source/swagger/open_residence.yaml
+      - run: swagger-cli validate source/swagger/open_vehicle.yaml
+      - run: swagger-cli validate source/swagger/open_welfare.yaml
+
+      - uses: stoplightio/spectral-action@v0.8.1
+        with:
+          file_glob: 'source/swagger/*.yaml'
 
       - run: npm install -g widdershins
 
@@ -97,10 +119,10 @@ jobs:
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
 
-      - run: bundle exec middleman build
+      - run: bundle exec middleman build --verbose
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
         with:
-          github_token: ${{ secrets.GH_PAT }}
-          publish_dir: ./documentation/build
+          name: slate-build
+          path: ./documentation/build
