--- a/documentation/source/swagger/open_data_channels.yaml
+++ b/documentation/source/swagger/open_data_channels.yaml
@@ -44,6 +44,12 @@ paths:
           $ref: '#/components/responses/TooManyRequests'
         '500':
           $ref: '#/components/responses/InternalServerError'
+        default:
+          description: Lista de dependências próprias obtida com sucesso.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseBranchesList'
   /electronic-channels:
     get:
       tags:
@@ -77,6 +83,12 @@ paths:
           $ref: '#/components/responses/TooManyRequests'
         '500':
           $ref: '#/components/responses/InternalServerError'
+        default:
+          description: Listagem de canais eletrônicos de atendimento obtida com sucesso.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseElectronicChannelsList'
   /phone-channels:
     get:
       tags:
@@ -110,9 +122,16 @@ paths:
           $ref: '#/components/responses/TooManyRequests'
         '500':
           $ref: '#/components/responses/InternalServerError'
+        default:
+          description: Listagem de canais telefônicos de atendimento obtida com sucesso.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponsePhoneChannelsList'
 components:
   schemas:
     ResponseBranchesList:
+      description: ''
       type: object
       required:
         - data
@@ -175,6 +194,7 @@ components:
           minItems: 1
           description: Lista de Dependências de uma Instituição
     ResponseElectronicChannelsList:
+      description: ''
       type: object
       required:
         - data
@@ -346,8 +366,8 @@ components:
         type:
           type: string
           description: Tipo de dependência.
-          enum: [FILIAL, UNIDADE_ADMINISTRATIVA_DESMEMBRADA, DEPENDENCIA_TERCEIROS]
-          example: FILIAL
+          enum: [POSTO_ATENDIMENTO, UNIDADE_ADMINISTRATIVA_DESMEMBRADA]
+          example: POSTO_ATENDIMENTO
         code:
           type: string
           maxLength: 4
@@ -545,7 +565,7 @@ components:
             - "18"
             - "19"
           description: Código dos Serviços efetivamente prestados pelo Canal de Atendimento
-          example: "15"
+          example: "01"
       required:
       - code
       - name
@@ -583,13 +603,10 @@ components:
             - OUTROS
           description: "Tipo de canal de atendimento eletrônico"
           example: "CHAT"
-        additionalInfo:
+        accessType:
           type: string
-          pattern: \w*\W*
-          maxLength: 300
-          description: |
-            Campo de texto livre para descrever complementação de informações necessárias. De preenchimento obrigatório para  o tipo de canal de atendimento 'OUTROS'
-            Restrição: Preenchimento obrigatório para o tipo de canal de atendimento 'OUTROS'
+          description: Tipo de acesso
+          enum: [EMAIL, INTERNET, APP, CHAT, WHATSAPP, CONSUMIDOR, OUTROS]
         urls:
           type: array
           items:
@@ -609,7 +626,7 @@ components:
         name:
           type: string
           enum:
-            - ALTERACOES_FORMA_PAGAMENTO
+            - ALTERACACOES_FORMA_PAGAMENTO
             - AVISO_SINISTRO
             - CANCELAMENTO_SUSPENSAO_PAGAMENTO_PREMIOS_CONTRIBUICAO
             - EFETIVACAO_APORTE
@@ -629,7 +646,7 @@ components:
             - SEGUNDA_VIA_DOCUMENTOS_CONTRATUAIS
             - SUGESTOES_ELOGIOS
           description: "Nome dos Serviços efetivamente prestados pelo Canal de Atendimento"
-          example: "SEGUNDA_VIA_DOCUMENTOS_CONTRATUAIS"
+          example: "ALTERACACOES_FORMA_PAGAMENTO"
         code:
           type: string
           enum:
@@ -694,6 +711,7 @@ components:
     ####################
     #### ResponsePhoneChannelsList ####
     ResponsePhoneChannelsList:
+      description: ''
       type: object
       required:
         - data
@@ -1079,7 +1097,7 @@ components:
           schema:
             $ref: '#/components/schemas/ResponseError'
     InternalServerError:
-      description: Ocorreu um erro no gateway da API ou no servidor
+      description: Ocorreu um erro no gateway da API ou no microsserviço
       content:
         application/json; charset=utf-8:
           schema:
