--- a/swagger/admin_metrics.yaml
+++ b/swagger/admin_metrics.yaml
@@ -120,31 +120,35 @@ components:
             endpoints:
               $ref: '#/components/schemas/EndpointDowntime'
     EndpointUptime:
-      type: object
-      description: Tempos de uptime por endpoint.
-      required:
-        - url
-        - uptimeRate
-      properties:
-        url:
-          type: string
-          description: URL do endpoint
-        uptimeRate:
-          type: string
-          description: Taxa de disponibilidade do endpoint.
+      type: array
+      items:
+        type: object
+        description: Tempos de uptime por endpoint.
+        required:
+          - url
+          - uptimeRate
+        properties:
+          url:
+            type: string
+            description: URL do endpoint
+          uptimeRate:
+            type: string
+            description: Taxa de disponibilidade do endpoint.
     EndpointDowntime:
-      type: object
-      description: Tempos de downtime por endpoint.
-      required:
-        - url
-        - partialDowntime
-      properties:
-        url:
-          type: string
-          description: URL do endpoint
-        partialDowntime:
-          type: integer
-          description: Quantidade de segundos de indisponibilidade do endpoint.
+      type: array
+      items:
+        type: object
+        description: Tempos de downtime por endpoint.
+        required:
+          - url
+          - partialDowntime
+        properties:
+          url:
+            type: string
+            description: URL do endpoint
+          partialDowntime:
+            type: integer
+            description: Quantidade de segundos de indisponibilidade do endpoint.
     InvocationMetrics:
       type: object
       required:
