chore: add allowPortability property to PersonProducts

--- a/documentation/source/swagger/partials/open_people_risk_welfare.yaml
+++ b/documentation/source/swagger/partials/open_people_risk_welfare.yaml
@@ -126,6 +126,7 @@ components:
           - termsAndConditions
           - contractType
           - otherGuaranteedValues
+          - allowPortability
           - portabilityGraceTime
           - indemnityPaymentMethod
         properties:
@@ -299,6 +300,10 @@ VITIMA]
           otherGuaranteedValues:
             type: string
             enum: [SALDAMENTO, BENEFICIO_PROLONGADO, NAO_SE_APLICA]
+          allowPortability:
+            type: boolean
+            description: Permite portabilidade
+            example: true
           portabilityGraceTime:
             type: integer
             description: Prazo de carência em dias para Portabilidade
