fix: add category as a required field of PersonProducts

--- a/documentation/source/swagger/partials/open_people_risk_welfare.yaml
+++ b/documentation/source/swagger/partials/open_people_risk_welfare.yaml
@@ -119,6 +119,7 @@ components:
         required:
           - name
           - code
+          - category
           - insuranceModality
           - coverages
           - additional
