fix: add globalCapital as a required field of PersonProducts

--- a/documentation/source/swagger/partials/open_people_risk_welfare.yaml
+++ b/documentation/source/swagger/partials/open_people_risk_welfare.yaml
@@ -125,6 +125,7 @@ components:
           - additional
           - serviceDetail
           - termsAndConditions
+          - globalCapital
           - contractType
           - otherGuaranteedValues
           - allowPortability
