fix: add indemnityPaymentIncome as a required field of PersonProducts

--- a/documentation/source/swagger/partials/open_people_risk_welfare.yaml
+++ b/documentation/source/swagger/partials/open_people_risk_welfare.yaml
@@ -131,6 +131,7 @@ components:
           - allowPortability
           - portabilityGraceTime
           - indemnityPaymentMethod
+          - indemnityPaymentIncome
         properties:
           name:
             type: string
