fix: add targetAudience as a required field of PersonProducts

--- a/documentation/source/swagger/partials/open_people_risk_welfare.yaml
+++ b/documentation/source/swagger/partials/open_people_risk_welfare.yaml
@@ -132,6 +132,7 @@ components:
           - portabilityGraceTime
           - indemnityPaymentMethod
           - indemnityPaymentIncome
+          - targetAudience
         properties:
           name:
             type: string
